assets/css/styles.css
:root {
    --primary-font: "Zalando Sans Expanded", sans-serif;
}

.bebas-neue-regular {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-style: bold;
}

.zalando-sans-expanded-normal {
    font-family: "Zalando Sans Expanded", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}
.zalando-sans-expanded-impact {
    font-family: "Zalando Sans Expanded", sans-serif;
    font-optical-sizing: auto;
    font-weight: 600;
    font-style: semibold;
}

body {
    font-family: var(--primary-font);
}

section {
    height: max-content;
}

.content-container {
    height: auto;
}
/* grid visualisation CSS for testing */
.hero {
    position: relative;
    height: 85vh;
    background-image: url("../image/unsplashhero.webp");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.hero-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: white;
    text-decoration: uppercase;
}

/* grid visualisation CSS for testing 
.container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
}
*/
/*pulls container to bottom of hero section*/
/* centers content vertically in container */
.content-container {
    position: relative;
    align-self: center;
    margin: 0;
}

/* Styling for each info section*/
.infoblock {
    min-width: 0;
    left: 0;
    margin-bottom: 0rem;
    min-height: max-content;
    align-items: center !important /* Override Bootstrap align-items for rows */;
}

#concern-banner {
    border-bottom: 2px solid black;
}
/* Media queries */

/* Small screens and up */

@media screen and (min-width: 576px) {
    .infoblock {
        min-height: 350px;
    }
}

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
}

/* Large devices (small laptops, 992px and up) */
@media screen and (min-width: 992px) {
}

/* xl devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
}

/* xxl devices (larger desktops, 1400px and up) */
@media screen and (min-width: 1400px) {
}

